# andrews-deal

./: BuildingNotes.md  Deal316FeaturesAndFixes.md  FrontPage.md  GettingSourceCode.md  Holding.h  LongTermGoals.md  Make.debian  Make.mac-osx  Make.ubuntu  Makefile  ProjectHome.md  config.h.in  configure.ac  dds.cpp  dds.h  ddsInline.h  ddsInterface.h  ddsLookup.cpp  ddsLookup.h  deal.c  deal.h  deal.tcl  dealtypes.h  deck.h  dist.c  dist.h  formats.c  hand.c  holdings.c  holdings.h  keywords.c  random.c  stringbox.c  tcl_dds.c  tcl_deal.c  vector.c
branches/autoconf/: Makefile.am  configure  ddsLookup.h  hand.c  maindeal.c  makecounttable.c  stat.c  stat.h
branches/autoconf/docs/html/: Optimization.html
branches/autoconf/format/: bid  default
branches/autoconf/input/: ddline.tcl
branches/autoconf/lib/: bid.tcl  binky-data.tcl  dominated.tcl
branches/autoconf/tests/: 1-holding.tcl  1-rand.tcl  4-dominated.tcl  4-handFactory.tcl
ex/: 1-stack.tcl  3nt-common.tcl  7.tcl  dds.tcl
format/: bid  count  default  none  onehand  par  parArticle  pbn  practice  simpleokb
input/: ddline.tcl  line.tcl  smartstack.tcl  symmetric.tcl
lib/: auction.tcl  bid.tcl  binky-data.tcl  dominated.tcl  features.tcl  gib.tcl  handFactory.tcl  handProc.tcl  parscore.tcl  score.tcl  shapes.tcl  utility.tcl
release/: README
releases/: README
tags/first/: dds.h  (+4 more)
tests/: 1-sdev-merge.tcl  1-sdev.tcl  4-auction.tcl  4-score.tcl  dds-bug.tcl  dominated.tcl  great88  handFactory.tcl
trunk/: Holding.h  Make.debian  Make.mac-osx  Make.ubuntu  Makefile  dds.cpp  dds.h  ddsInline.h  ddsInterface.h  ddsLookup.cpp  ddsLookup.h  deal.c  deal.h  deal.tcl  dealtypes.c  dist.c  hand.c  holdings.c  keywords.c  maindeal.c  stat.c  stringbox.c  tcl_dds.c  tcl_deal.c  tcl_dist.h  tcl_incl.h
(+375 files in other folders)
